fix: minor updates to the design, add truncation to file tree

--- a/src/styles/__vars.scss
+++ b/src/styles/__vars.scss
@@ -18,13 +18,20 @@
   --platform-grey-800: #424242;
   --platform-grey-900: #212121;
 
-  --primary-100: #8EA1F1;
+  --primary-100: #8DA3F0;
   --primary-200: #9A90F5;
+  --primary-300: #9575CD;
+  --primary-400: #7E57C2;
+  --primary-500: #673AB7;
+  --primary-600: #5E35B1;
+  --primary-700: #512DA8;
+  --primary-800: #4527A0;
+  --primary-900: #311B92;
 
   // Font
   --platform-text-size-small: 0.9rem;
   --platform-text-size-large: 1.175rem;
-  --platform-char-spacing: 0.05rem;
+  --platform-char-spacing: 0.03rem;
   
   // Animation
   --platform-animation-speed-base: 250ms;
