--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,4 +1,7 @@
 .app {
+  background-image: url('../images/background.png');
+  background-position: center;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -11,6 +14,7 @@
 }
 
 .app__wrapper {
+  background-color: rgba(255, 255, 255, 0.7);
   display: flex;
   flex: 2;
   height: 100%;
