--- a/src/styles/_listing.scss
+++ b/src/styles/_listing.scss
@@ -1,17 +1,54 @@
 .listing {
   background: linear-gradient(to bottom, var(--primary-100), var(--primary-200));
   background-color: var(--primary-200);
+  box-shadow: 3px 3px 6px #8f86e4, -3px -3px 6px #a59aff;
   max-width: 350px;
-  min-width: 250px;
+  min-width: 280px;
+  overflow: hidden;
   padding: var(--platform-spacing-base);
+  position: relative;
   width: 30%;
+
+  &::before {
+    background-color: #82B0FE;
+    border-radius: 100%;
+    content: "";
+    display: block;
+    height: 100px;
+    right: 85%;
+    position: absolute;
+    top: -5%;
+    width: 100px;
+  }
+
+  &::after {
+    background-color: #7F8BEF;
+    border-radius: 100%;
+    content: "";
+    display: block;
+    height: 200px;
+    left: 85%;
+    position: absolute;
+    top: 100px;
+    width: 180px;
+  }
+}
+
+.listing__wrapper {
+  position: relative;
+  z-index: 1;
 }
 
 .listing__title {
+  background: linear-gradient(to right, var(--primary-300), var(--primary-900));
+  background-clip: border-box;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   color: var(--platform-grey-100);
   margin: 0;
   margin-bottom: var(--platform-spacing-small);
   overflow: hidden;
+  position: relative;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
@@ -36,19 +73,12 @@
 .listing__item {
   background-color: transparent;
   border-radius: var(--platform-spacing-xsmall);
-  color: var(--platform-grey-100);
   cursor: pointer;
   display: flex;
-  font-size: var(--platform-text-size-small);
-  font-weight: 500;
-  letter-spacing: var(--platform-char-spacing);
   margin-bottom: var(--platform-spacing-xsmall);
   min-width: 0;
-  overflow: hidden;
   padding: var(--platform-spacing-small);
-  text-overflow: ellipsis;
   transition: all var(--platform-animation-speed-base) linear;
-  white-space: nowrap;
 
   &:hover {
     background-color: transparentize($color: #f5f5f5, $amount: 0.8);
@@ -67,4 +97,14 @@
     height: 1.2rem;
     width: 1.2rem;
   }
+}
+
+.listing__item-text {
+  color: var(--platform-grey-100);
+  font-size: var(--platform-text-size-small);
+  font-weight: 500;
+  letter-spacing: var(--platform-char-spacing);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
